--- a/vue/dbc/index - 副本.html
+++ b/vue/dbc/index - 副本.html
@@ -9,13 +9,10 @@
 
 <body>
   <div id="app">
-    {{url.asdf}}! {{url.hhh}}! {{url.wqer}}
-    <el-input v-model="url.hhh"></el-input>
-    <el-button @click="haha">按钮</el-button>
-    <el-button @click="hahaa">按钮</el-button>
-    <el-dialog :visible.sync="visible" title="Hello world">
-      <p>欢迎使用 Element</p>
-    </el-dialog>
+      <el-header>Header</el-header>
+      <el-aside width="150px">
+       <el-aside >asdf</el-aside>  
+      </el-aside>
   </div>
 </body>
 <!-- 先引入 Vue -->
