--- a/vue/dbc/index - 副本.html
+++ b/vue/dbc/index - 副本.html
@@ -2,50 +2,100 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <!-- 引入样式 -->
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-</head>
+  <meta charset="UTF-8"> </head>
 
 <body>
-  <div id="app">
-      <el-header>Header</el-header>
-      <el-aside width="150px">
-       <el-aside >asdf</el-aside>  
-      </el-aside>
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <div id="nd101">
+    <el-form id="nd101-form" ref="nd101-form">
+      <el-row>
+        <el-col :span=8>
+          <el-form-item label="编码" id="nd101-form-item1" ref="nd101-form-item1">
+            <el-input v-model="ds.obj.fields.code" id="nd101-form-item1-text1" ref="nd101-form-item1-text1"></el-input>
+          </el-form-item>
+        </el-col>
+        <el-col :span=8>
+          <el-form-item label="名称" id="nd101-form-item2" ref="nd101-form-item2">
+            <el-input v-model="ds.obj.fields.name" id="nd101-form-item2-text1" ref="nd101-form-item2-text1"></el-input>
+          </el-form-item>
+        </el-col>
+        <el-col :span=8>
+          <el-form-item label="绑定元素" id="nd101-form-item3" ref="nd101-form-item3">
+            <el-input v-model="ds.obj.fields.layoutNdCode" id="nd101-form-item3-text1" ref="nd101-form-item3-text1"></el-input>
+          </el-form-item>
+        </el-col>
+        <el-col :span=8>
+          <el-form-item id="nd101-form-item4" ref="nd101-form-item4">
+            <el-button id="nd101-form-item4-button" ref="nd101-form-item4-button" @click="normalSave('nd101-form-item4-button')" binddata="this.ds.obj"
+              bindndcode="101" callbackparent="nd101.ds" callbackname="obj" url=http://localhost:18120/base/nv/saveNv/ parentid="value=0">保存</el-button>
+          </el-form-item>
+        </el-col>
+      </el-row>
+    </el-form>
   </div>
-</body>
-<!-- 先引入 Vue -->
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
-<!-- 引入组件库 -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
-<script>
-  var vm = new Vue({
-    el: '#app',
-    data: {
-      visible: false,
-      url: []
-    },
-    methods: {
-      hahaa: function () {
-        // vm.$set(this.data.aaa, "aaa", "asdf");
-        vm.$set(vm.$data.url, "aaa", { asf: "asdf" })
-      },
-      haha: function () {
-        var urlTemp = location.search; //获取url中"?"符后的字串   
-        if (urlTemp.indexOf("?") != -1) {
-
-          var str = urlTemp.substr(1);
-          strs = str.split("&");
-          for (var i = 0; i < strs.length; i++) {
-            var tempParam = strs[i].split("=");
-            vm.$set(vm.$data.url, tempParam[0], tempParam[1]);
+  <div id="vue-script">
+    <script> var nd101 = new Vue({
+        el: "#nd101", data: {
+          ds: {
+            ndCode: "101", url: {}
           }
+        },
+        methods: {
+          initBusinessData: function (name) {
+            var urlTemp = location.search; if (urlTemp.indexOf("?") != -1) {
+              var str = urlTemp.substr(1);
+              strs = str.split("&");
+              for (var i = 0; i < strs.length; i++) {
+                var tempParam = strs[i].split("=");
+                nd101.$set(nd101.ds.url, tempParam[0], tempParam[1]);
+              }
+            }
+            var idTemp = 0;
+            if (nd101.ds.url.id != undefined && nd101.ds.url.id != null) {
+              idTemp = nd101.ds.url.id;
+            } axios.get("http://localhost:18120/base/nv/getNv/" + this.ds.ndCode + "/" + idTemp)
+              .then(function (response) {
+                if (response.data.success) {
+                  nd101.$set(nd101.ds, name, response.data.data);
+                } else {
+                  alert(response.data.message);
+                }
+              })
+              .catch(function (error) { alert(error); });
+          },
+          normalSave: function (refName) {
+            var tempButton = nd101.$refs[refName];
+            var tempParentId = 0; var tempSplitParentId = tempButton.$attrs["parentid"].split("=");
+            if (tempSplitParentId[0] == "value") {
+              tempParentId = tempSplitParentId[1];
+            } else if (tempSplitParentId[0] == "data") {
+              tempParentId = eval(tempSplitParentId[1]);
+            } else {
+              alert("页面配置有误，请联系系统管理员"); return;
+            }
+            axios.post(tempButton.$attrs["url"] + tempButton.$attrs["bindndcode"] + "/" + tempParentId, eval(tempButton.$attrs["binddata"]))
+              .then(function (response) {
+                if (response.data.success) {
+                  nd101.$set(eval(tempButton.$attrs["callbackparent"]), tempButton.$attrs["callbackname"], response.data.data);
+                } else {
+                  alert(response.data.message);
+                }
+              })
+              .catch(function (error) {
+                alert(error);
+              });
+          }
+        },
+        mounted: function () {
+          this.$nextTick(function () {
+            this.initBusinessData("obj");
+            this.initBusinessData("Test");
+          })
         }
-        alert(vm.$data.url);
-      }
-    }
-  })
-</script>
+      });</script> </div>
+</body>
 
 </html>
