--- a/vue/dbc/index - 副本 (3).html
+++ b/vue/dbc/index - 副本 (3).html
@@ -9,15 +9,38 @@
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/element-ui/lib/index.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <div id="nd101" ref="nd101">
-    <el-container>
-      <el-aside>
-        <el-tree :data="ds.layoutTreeData" :props="{children: 'layoutTreeChildren',label: 'layoutTreeName'}" @node-click="handleNodeClick"></el-tree>
-      </el-aside>
-      <el-main>
-        <iframe ref="iframe" src="" frameborder=0 width="100%" height="100%"></iframe>
-      </el-main>
-    </el-container>
+  <div id="nd101" ref="nd101div">
+    <el-form id="nd101-form" ref="nd101-form">
+      <el-row>
+        <el-col :span=8>
+          <el-form-item label="编码" id="nd101-form-item1" ref="nd101-form-item1">
+            <el-input v-model="ds.obj.fields.code" id="nd101-form-item1-text1" ref="nd101-form-item1-text1"></el-input>
+          </el-form-item>
+        </el-col>
+        <el-col :span=8>
+          <el-form-item label="名称" id="nd101-form-item2" ref="nd101-form-item2">
+            <el-input v-model="ds.obj.fields.name" id="nd101-form-item2-text1" ref="nd101-form-item2-text1"></el-input>
+          </el-form-item>
+        </el-col>
+        <el-col :span=8>
+          <el-form-item label="绑定元素" id="nd101-form-item3" ref="nd101-form-item3">
+            <el-input v-model="ds.obj.fields.layoutNdCode" id="nd101-form-item3-text1" ref="nd101-form-item3-text1"></el-input>
+          </el-form-item>
+        </el-col>
+        <el-col :span=8>
+          <el-form-item id="nd101-form-item4" ref="nd101-form-item4">
+            <el-button id="nd101-form-item4-button" ref="nd101-form-item4-button" @click="normalSave('nd101-form-item4-button')" binddata="nd101.ds.obj"
+              bindndcode="101" callbackparent="nd101.ds" callbackname="obj" url=http://localhost:18120/layout/layout/saveNv/
+              parentid="value=0">保存</el-button>
+          </el-form-item>
+        </el-col>
+        <el-col :span=8>
+          <el-form-item id="nd101-form-item4" ref="nd101-form-item4">
+            <el-button id="nd101-form-item4-button" ref="nd101-form-item4-button" @click="haha($event)">haha</el-button>
+          </el-form-item>
+        </el-col>
+      </el-row>
+    </el-form>
   </div>
   <div id="vue-script">
     <script> var nd101 = new Vue({
@@ -27,31 +50,15 @@
           }
         },
         methods: {
-          haha: function () {
-            alert(123);
+          haha: function (ev) {
+            var tempdiv = nd101.$refs["testdiv"];
+            var nd101div = nd101.$refs["nd101div"];
+            alert(nd101div.offsetHeight);
+            tempdiv.style.marginTop = ev.pageY-nd101div.offsetHeight + "px";
+            tempdiv.style.marginLeft = ev.pageX + 20 + "px";
           },
-          handleNodeClick: function (ev) {
-            console.log(ev);
-            nd101.$refs["iframe"].src = "./layout/nd" + ev.ndCode + ".html";
-          },
-          initLayoutTreeData: function (name) {
-            var idTemp = 0;
-            if (nd101.ds.url.id != undefined && nd101.ds.url.id != null) {
-              idTemp = nd101.ds.url.id;
-            }
-            axios.get("http://localhost:18120/layout/layout/nv2Json/" + idTemp + "/true")
-              .then(function (response) {
-                if (response.data.success) {
-                  nd101.$set(nd101.ds, name, response.data.data);
-                } else {
-                  alert(response.data.message);
-                }
-              })
-              .catch(function (error) { alert(error); });
-          },
-          initUrl: function () {
-            var urlTemp = location.search;
-            if (urlTemp.indexOf("?") != -1) {
+          initBusinessData: function (name) {
+            var urlTemp = location.search; if (urlTemp.indexOf("?") != -1) {
               var str = urlTemp.substr(1);
               strs = str.split("&");
               for (var i = 0; i < strs.length; i++) {
@@ -59,8 +66,6 @@
                 nd101.$set(nd101.ds.url, tempParam[0], tempParam[1]);
               }
             }
-          },
-          initBusinessData: function (name) {
             var idTemp = 0;
             if (nd101.ds.url.id != undefined && nd101.ds.url.id != null) {
               idTemp = nd101.ds.url.id;
@@ -99,10 +104,8 @@
         },
         mounted: function () {
           this.$nextTick(function () {
-            nd101.initUrl();
             nd101.initBusinessData("obj");
             nd101.initBusinessData("Test");
-            nd101.initLayoutTreeData("layoutTreeData");
           })
         }
       });</script> </div>
